language/move-lang/tests/move_check/typing/borrow_local_invalid.move
module M {
    t0(r: &u64, r_mut: &mut u64) {
        &r;
        &r_mut;
        &mut r;
        &mut r_mut;
    }
}
